@@ -30,10 +30,10 @@ echo "$0: Beginning session setup..."
 
 # First read /etc/profile and .profile
 test -f /etc/profile && . /etc/profile
-test -f $HOME/.profile && . $HOME/.profile
+test -f "$HOME/.profile" && . "$HOME/.profile"
 # Second read /etc/xprofile and .xprofile for X specific setup
 test -f /etc/xprofile && . /etc/xprofile
-test -f $HOME/.xprofile && . $HOME/.xprofile
+test -f "$HOME/.xprofile" && . "$HOME/.xprofile"
 
 # Translation stuff
 if [ -x "@EXPANDED_LIBEXECDIR@/gdmtranslate" ] ; then
@@ -45,7 +45,7 @@ fi
 # Note that this should only go to zenity dialogs which always expect utf8
 gettextfunc () {
   if [ "x$gdmtranslate" != "x" ] ; then
-    $gdmtranslate --utf8 "$1"
+    "$gdmtranslate" --utf8 "$1"
   else
     echo "$1"
   fi
@@ -61,7 +61,7 @@ fi
 
 if [ x"$command" = xfailsafe ] ; then
   if [ -n "$zenity" ] ; then
-    $zenity --info --text `gettextfunc "This is the failsafe xterm session.  Windows now have focus only if you have your cursor above them.  To get out of this mode type 'exit' in the window in the upper left corner"`
+    "$zenity" --info --text `gettextfunc "This is the failsafe xterm session.  Windows now have focus only if you have your cursor above them.  To get out of this mode type 'exit' in the window in the upper left corner"`
   else
     echo "$0: Starting the failsafe xterm session."
   fi
@@ -74,12 +74,12 @@ fi
 # clean up after xbanner
 freetemp=`which freetemp 2>/dev/null`
 if [ -n "$freetemp" ] ; then
-	$freetemp
+	"$freetemp"
 fi
 
-userresources=$HOME/.Xresources 
-usermodmap=$HOME/.Xmodmap 
-userxkbmap=$HOME/.Xkbmap
+userresources="$HOME/.Xresources"
+usermodmap="$HOME/.Xmodmap"
+userxkbmap="$HOME/.Xkbmap"
 
 sysresources=/etc/X11/Xresources 
 sysmodmap=/etc/X11/Xmodmap 
@@ -207,7 +207,7 @@ if [ "x$command" = "xdefault" ] ; then
 fi
 
 # add ssh-agent if found
-sshagent=`which ssh-agent 2>/dev/null`
+sshagent="`which ssh-agent 2>/dev/null`"
 if [ -n "$sshagent" ] && [ -x "$sshagent" ] && [ -z "$SSH_AUTH_SOCK" ]; then
     command="$sshagent -- $command"
 elif [ -z "$sshagent" ] ; then
@@ -221,7 +221,7 @@ eval exec $command
 echo "$0: Executing $command failed, will run xterm"
 
 if [ -n "$zenity" ] ; then
-	$zenity --info --text `gettextfunc "I could not start your session and so I have started the failsafe xterm session.  Windows now have focus only if you have your cursor above them.  To get out of this mode type 'exit' in the window in the upper left corner"`
+	"$zenity" --info --text `gettextfunc "I could not start your session and so I have started the failsafe xterm session.  Windows now have focus only if you have your cursor above them.  To get out of this mode type 'exit' in the window in the upper left corner"`
 fi
 
 exec xterm -geometry 80x24+0+0
