@@ -1,3 +1,12 @@
+Mon Sep 29 14:32:18 2003  George Lebl <jirka@5z.com>
+
+	* config/PreSession.in, config/PostSession.in, config/XKeepsCrashing,
+	  config/Xsession.in:  Be more careful with shell stuff and quote
+	  whatever we can, should fix rh #105858.
+
+	* daemon/misc.c, config/XKeepsCrashing: Don't use gdialog as it's
+	  nowdays just a wrapper on zenity
+
 Fri Sep 26 13:38:55 2003  George Lebl <jirka@5z.com>
 
 	* daemon/slave.c: in a further fit of anality, stat the file
